ImputerExperiments/data/logs/outputs/output.993486_2.out
Run: 2
/cm/local/apps/slurm/var/spool/job993486/slurm_script: line 26: 
pip install -e tpot2
pip install -r tpot2/ImputerExperiments/requirements_.txt
: No such file or directory
RunStart
Traceback (most recent call last):
  File "/common/ketrong/tpotexp/tpot2/ImputerExperiments/Locally_run_code/main.py", line 10, in <module>
    import utils
  File "/common/ketrong/tpotexp/tpot2/ImputerExperiments/Locally_run_code/utils.py", line 89
    X = X.iloc[:, [:4, 6]]
                   ^
SyntaxError: invalid syntax
srun: error: esplhpc-cp031: task 0: Exited with exit code 1
